FindBugs warning cleanup
Fix possible null dereference in AbstractShape.equals()
Replaced manual array copy in MathOp
Replaced string-concatenation-in-loop for StringBuilder use
Replaced EAdShape clone() with copyShape() returning EAdShape
Removed some equals() from model, left most hashCode()s alone